Сделано второе задание
Signed-off-by: Dmitry Mukhortov <mukhortov.dimitry@yandex.ru>

--- a/ex2/public/contact.html
+++ b/ex2/public/contact.html
@@ -44,51 +44,60 @@
           <div class="row">
               <div class="col-xl-3 col-lg-4 col-md-12 text-center">
                   <div class="about-header">
-                      <h1 class="about-header__text">Обо мне</h1>
+                      <h1 class="about-header__text">Связаться</h1>
                   </div>
               </div>
           </div>
           <div class="row">
-              <div class="col-xl-3 col-lg-4 col-md-12 text-center">
-                  <div class="avatar-info-block">   
-                      <div class="avatar-info-block__img"></div>
-                      <div class="avatar-info-block__text avatar-info-block__text_dark">Мухортов Дмитрий</div>
-                      <div class="avatar-info-block__text avatar-info-block__text_light">Frontend разработчик-стажёр</div>
-                      <div class="avatar-info-block__location-info">
-                        <div class="avatar-info-block__location-logo"></div>
-                        <div class="avatar-info-block__text avatar-info-block__text_light">Тверь, Россия</div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-9 col-lg-8 col-md-12">
+
+              <div class="col-xl-4 col-lg-4 col-md-12 text-center">
                   <div class="content-block">
-                      <h2 class="content-block__header">Обучение</h2>
+                      <h2 class="content-block__header">Приходите</h2>
                         <section class="content-block__info">
                           <p>
-                              &emsp;В 2013 году поступил на бюджет в Тверской Политех на направление «Информатика и Вычислительная техника». 
-                              В 2017 году выпустился с красным дипломом бакалавра и в том же году поступил
-                              в магистратуру в Политех на то же направление. Окончил магистратуру в 2019 с красным дипломом.
+                              &emsp;г. Тверь, наб. Реки Лазури, дом 15
                           </p>
+                          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A256cfd4a1896bfb68a10e234bace1d5d8bc0ab73457b783ffd097ae89bb2368c&amp;source=constructor" 
+                          width="250" height="250" frameborder="0"></iframe>
                         </section> 
                   </div>
+              </div>
 
-                  <div class="content-block">
-                      <h2 class="content-block__header">Опыт</h2>
-                        <section class="content-block__info">
-                          <p>&emsp;Языки программирования:</p>
-                            <ul>
-                              <li>C;</li>
-                              <li>C++;</li>
-                              <li>C#;</li>
-                              <li>Java.</li>
-                            </ul>
-                          <p>&emsp;Опыт работы:</p>
-                            <ul>
-                              <li>Правительство Тверской области - (2017 - 2018);</li>
-                              <li>«ООО СБ-СОФТ» - (2017 - н.в).</li>
-                            </ul>
-                        </section> 
-                  </div>
+              <div class="col-xl-5 col-lg-6 col-md-12 text-center">
+                <form class="contact-block">
+                    <h2 class="contact-block__header">Заказать звонок</h2>
+                    <div class="contact-block__input">
+                      <div>
+                          <p class="contact-block__input-label">Как к вам обращаться?</p>
+                          <input class="contact-block__input-element" sautofocus>
+                      </div>
+                      <div>
+                          <p class="contact-block__input-label" >Телефон</p>
+                          <input class="contact-block__input-element" autofocus>
+                      </div>
+                    </div>
+                    <div class="contact-block__send">
+                        <div>Нажимая на кнопку, вы даете согласие на <span class="contact-block__send_underlined">обработку персональных данных.</span></div>
+                        <button type="button" class="btn btn-primary">Отправить</button>
+                    </div>
+                </form>
+                <div class="phone-block">
+                    <h2 class="phone-block__header">Звоните</h2>
+                    <div class="phone-block__contacts">
+                        <div>
+                          <p class="phone-block__city">Тверь</p>
+                          <p class="phone-block__phone-number">88005553535</p>
+                        </div>
+                        <div>
+                            <p class="phone-block__city">Москва</p>
+                            <p class="phone-block__phone-number">88005553535</p>
+                        </div>
+                        <div>
+                            <p class="phone-block__city">Санк-Петербург</p>
+                            <p class="phone-block__phone-number">88005553535</p>
+                        </div>
+                    </div>
+                </div>
               </div>
           </div>
         </div>
