Исправления первой страницы (часть)
Signed-off-by: Dmitry Mukhortov <mukhortov.dimitry@yandex.ru>

--- a/ex2/public/index.html
+++ b/ex2/public/index.html
@@ -8,112 +8,126 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel = "stylesheet" href="style.css">
+    <!-- <link rel="stylesheet prefetch" href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css"> -->
     <title>Intern start portfolio!</title>
   </head>
   <body>
     <header class="header-bar">
-      <div class="container">
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-5 align-self-center">
-                <div class= "header-bar-logo-block"> 
-                  <div class="header-bar-logo-block__img"></div>
-                  <div class="header-bar-logo-block__text">
-                    <div>INTERN</div>
-                    <div>START</div>
-                  </div>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-2 col-md-3 col-sm-4 col-5">
+                    <div class= "logo">
+                        <img class ="logo__img" src="img/Logo.png" alt="Smiley face">
+                        <div class="logo__text centered">INTERN </br> START</div> 
+                    </div>
+                </div>
+
+                <div class="col-lg-7 col-md-3 col-sm-1 col-1"></div>
+
+                <div class="col-lg-3 col-md-5 col-sm-7 col-6">
+                    <nav class = "navigation-panel centered float-right">
+                        <ul class="nav-bar">
+                            <li class="nav-bar__item">
+                              <a class = "nav-link" href="index.html">ОБО МНЕ</a> 
+                            </li>
+                            <li class="nav-bar__item">
+                              <a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+            </div>
+
+        </div>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-1 col-md-3 col-sm-1 col-1"></div>
+                <div class="col-lg-3 col-md-12">
+                    <div class="section-header">
+                        <h1 class="section-header__title">Обо мне</h1>
+                    </div>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-5 col-md-3 col-sm-1 col-1"></div>
-            <div class="col-xl-3 col-lg-4 col-md-5 col-sm-7 col-6 align-self-center">
-              <nav class="header-bar-nav">
-                  <ul class="header-bar-nav-menu">
-                      <li class="header-bar-nav__item">
-                        <a class = "nav-link" href="index.html">ОБО МНЕ</a> 
-                      </li>
-                      <li class="header-bar-nav__item">
-                          <a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a>
-                      </li>
-                  </ul>
-              </nav>
-            </div>
-        </div>
-      </div>
-    </header>
-    <section class="about">
-        <div class="container">
-          <div class="row">
-              <div class="col-xl-3 col-lg-4 col-md-12 text-center">
-                  <div class="about-header">
-                      <h1 class="about-header__text">Обо мне</h1>
-                  </div>
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-xl-3 col-lg-4 col-md-12 text-center">
-                  <div class="avatar-info-block">   
-                      <div class="avatar-info-block__img"></div>
-                      <div class="avatar-info-block__text avatar-info-block__text_dark">Мухортов Дмитрий</div>
-                      <div class="avatar-info-block__text avatar-info-block__text_light">Frontend разработчик-стажёр</div>
-                      <div class="avatar-info-block__location-info">
-                        <div class="avatar-info-block__location-logo"></div>
-                        <div class="avatar-info-block__text avatar-info-block__text_light">Тверь, Россия</div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-9 col-lg-8 col-md-12">
-                  <div class="content-block">
-                      <h2 class="content-block__header">Обучение</h2>
-                        <section class="content-block__info">
-                          <p>
-                              &emsp;В 2013 году поступил на бюджет в Тверской Политех на направление «Информатика и Вычислительная техника». 
-                              В 2017 году выпустился с красным дипломом бакалавра и в том же году поступил
-                              в магистратуру в Политех на то же направление. Окончил магистратуру в 2019 с красным дипломом.
-                          </p>
-                        </section> 
-                  </div>
+            <div class="row">
 
-                  <div class="content-block">
-                      <h2 class="content-block__header">Опыт</h2>
+                <div class="col-lg-1 col-md-1"></div>
+
+                <div class="col-lg-3 col-md-12 text-center">
+                    <div class="avatar-info-block">   
+                        <div class="avatar-info-block__img"></div>
+                        <div class="avatar-info-block__text avatar-info-block__text_dark">Мухортов Дмитрий</div>
+                        <div class="avatar-info-block__text avatar-info-block__text_light">Frontend разработчик-стажёр</div>
+                        <div class="avatar-info-block__location-info">
+                            <div class="avatar-info-block__location-logo"></div>
+                            <div class="avatar-info-block__text avatar-info-block__text_light avatar-info-block__text_no-margin">Тверь, Россия</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-7 col-md-12">
+
+                    <div class="content-block">
+                        <h2 class="content-block__header">Обучение</h2>
                         <section class="content-block__info">
-                          <p>&emsp;Языки программирования:</p>
-                            <ul>
-                              <li>C;</li>
-                              <li>C++;</li>
-                              <li>C#;</li>
-                              <li>Java.</li>
+                            <p class="content-block__info_big-font">
+                                В 2013 году поступил на бюджет в Тверской Политех на направление «Информатика и Вычислительная техника». 
+                                В 2017 году выпустился с красным дипломом бакалавра и в том же году поступил
+                                в магистратуру в Политех на то же направление. Окончил магистратуру в 2019 с красным дипломом.
+                            </p>
+                        </section> 
+                    </div>
+
+                    <div class="content-block">
+                        <h2 class="content-block__header">Опыт</h2>
+                        <section class="content-block__info">
+                            <p class="content-block__info_big-font">Языки программирования:</p>
+                            <ul class="content-block__info_no-decor">
+                                <li>• C</li>
+                                <li>• C++</li>
+                                <li>• C#</li>
+                                <li>• Java</li>
                             </ul>
-                          <p>&emsp;Опыт работы:</p>
-                            <ul>
-                              <li>Правительство Тверской области - (2017 - 2018);</li>
-                              <li>«ООО СБ-СОФТ» - (2017 - н.в).</li>
+                            <p class="content-block__info_big-font">Опыт работы:</p>
+                            <ul class="content-block__info_no-decor">
+                                <li>• Правительство Тверской области - (2017 - 2018)</li>
+                                <li>• «ООО СБ-СОФТ» - (2017 - н.в)</li>
                             </ul>
                         </section> 
-                  </div>
-              </div>
-          </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-1 col-md-1"> </div>
+
+            </div>
         </div>
     </section>
 
-    <footer class="footer-bar">
+    <footer class = "footer-bar">
         <div class="container">
-          <div class="row align-items-center">
-              <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6 col-5 align-self-center">
-                  <div class="footer-bar-rights-block">
-                    <div class="footer-bar-rights-block__year">©2019</div> 
-                    <div class="footer-bar-rights-block__desc">ВСЕ ПРАВА ЗАЩИЩЕНЫ</div> 
-                  </div>
-              </div>
-              <div class="col-xl-6 col-lg-5 col-md-1 col-sm-1 col-1"></div>
-              <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-6 align-self-center">
-                <div class="footer-bar-info-block">
-                  <div class="footer-bar-info-block__text">Сделано в</div>
-                  <a href="#" class="footer-bar-info-block__link">INTERN START</a>
-                </div>
-              </div>
-          </div>
-        </div>
-      </footer>
+            <div class="row">
 
+                <div class="col-xl-4 col-lg-3 col-md-5 col-sm-6 col-5">
+                    <div class="footer-bar__copyrights">
+                        <p class ="footer-bar__copyrights_bold">© 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
+                    </div>
+                </div>
+
+                <div class="col-xl-5 col-lg-5 col-md-1 col-sm-1 col-1"></div>
+
+                <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-6">
+                    <div class="footer-bar__copyrights float-right">
+                        <p>Сделано в <a href="#" class="footer-bar__copyrights_highlighted footer-bar__copyrights_bold">INTERN START</a> </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
 
