Правки второго задания TODO: Сетку под меньшие размеры экрана
Signed-off-by: Dmitry Mukhortov <mukhortov.dimitry@yandex.ru>

--- a/ex2/public/index.html
+++ b/ex2/public/index.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel = "stylesheet" href="style.css">
-    <!-- <link rel="stylesheet prefetch" href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css"> -->
     <title>Intern start portfolio!</title>
   </head>
   <body>
@@ -18,23 +17,20 @@
 
                 <div class="col-lg-2 col-md-3 col-sm-4 col-5">
                     <div class= "logo">
-                        <img class ="logo__img" src="img/Logo.png" alt="Smiley face">
-                        <div class="logo__text centered">INTERN </br> START</div> 
+                        <img class ="logo__img" src="img/Logo.png" alt="rocket">
+                        <div class="logo__text">INTERN </br> START</div> 
                     </div>
                 </div>
 
                 <div class="col-lg-7 col-md-3 col-sm-1 col-1"></div>
 
                 <div class="col-lg-3 col-md-5 col-sm-7 col-6">
-                    <nav class = "navigation-panel centered float-right">
-                        <ul class="nav-bar">
-                            <li class="nav-bar__item">
-                              <a class = "nav-link" href="index.html">ОБО МНЕ</a> 
-                            </li>
-                            <li class="nav-bar__item">
-                              <a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a>
-                            </li>
-                        </ul>
+                    <nav class = "navigation-panel">
+                            <ul class="nav-bar">
+                                <li class="nav-bar__item page_about_one"><a class = "nav-link" href="index.html">ОБО МНЕ</a></li><!--
+                                --><li class="nav-bar__item page_about_two"><a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a></li><!--
+                                --><hr class="page_about"/>
+                            </ul>
                     </nav>
                 </div>
 
@@ -87,15 +83,15 @@
                         <section class="content-block__info">
                             <p class="content-block__info_big-font">Языки программирования:</p>
                             <ul class="content-block__info_no-decor">
-                                <li>• C</li>
-                                <li>• C++</li>
-                                <li>• C#</li>
-                                <li>• Java</li>
+                                <li>C</li>
+                                <li>C++</li>
+                                <li>C#</li>
+                                <li>Java</li>
                             </ul>
                             <p class="content-block__info_big-font">Опыт работы:</p>
                             <ul class="content-block__info_no-decor">
-                                <li>• Правительство Тверской области - (2017 - 2018)</li>
-                                <li>• «ООО СБ-СОФТ» - (2017 - н.в)</li>
+                                <li>Правительство Тверской области - (2017 - 2018)</li>
+                                <li>«ООО СБ-СОФТ» - (2017 - н.в)</li>
                             </ul>
                         </section> 
                     </div>
@@ -112,17 +108,13 @@
             <div class="row">
 
                 <div class="col-xl-4 col-lg-3 col-md-5 col-sm-6 col-5">
-                    <div class="footer-bar__copyrights">
-                        <p class ="footer-bar__copyrights_bold">© 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
-                    </div>
+                    <p class="footer-bar__copyrights footer-bar__copyrights_bold">&copy; 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
                 </div>
 
                 <div class="col-xl-5 col-lg-5 col-md-1 col-sm-1 col-1"></div>
 
                 <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-6">
-                    <div class="footer-bar__copyrights float-right">
-                        <p>Сделано в <a href="#" class="footer-bar__copyrights_highlighted footer-bar__copyrights_bold">INTERN START</a> </p>
-                    </div>
+                    <p class="footer-bar__copyrights">Сделано в <a href="#" class="footer-bar__copyrights_highlighted footer-bar__copyrights_bold">INTERN START</a> </p>
                 </div>
 
             </div>
