--- a/ex2/public/contact.html
+++ b/ex2/public/contact.html
@@ -4,145 +4,115 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel = "stylesheet" href="style.css">
+    <link rel = "stylesheet" href="css/bootstrap.css">
     <title>Intern start portfolio!</title>
   </head>
   <body>
-    <header class="header-bar">
+    <header>
         <div class="container">
             <div class="row">
-
-                <div class="col-lg-5 col-md-5 col-sm-5 col-5">
-                    <div class= "logo">
-                        <img class ="logo__img" src="img/Logo.png" alt="rocket">
-                        <div class="logo__text">INTERN </br> START</div> 
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-2 col-sm-1 col-1"></div>
-
-                <div class="col-lg-3 col-md-5 col-sm-6 col-6">
-                    <nav class = "navigation-panel">
-                            <ul class="nav-bar">
-                                <li class="nav-bar__item page_contact_one"><a class = "nav-link" href="index.html">ОБО МНЕ</a></li><!--
-                                --><li class="nav-bar__item page_contact_two"><a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a></li><!--
-                                --><hr class="page_contact"/>
-                            </ul>
+                <div class="col-lg-12">
+                    <nav class="top-nav">
+                        <div class= "logo">
+                            <img class ="logo__img" src="img/Logo.png" alt="rocket">
+                            <div class="logo__text">INTERN </br> START</div> 
+                        </div>
+                        <input id="menu-toggle" type="checkbox" />
+                        <label class='menu-button-container' for="menu-toggle">
+                        <div class='menu-button'></div>
+                      </label>
+                        <ul class="menu">
+                            <li><a class = "nav-list-link" href="index.html">ОБО МНЕ</a></li>
+                            <li><a class = "nav-list-link" href="contact.html">СВЯЗАТЬСЯ</a></li>
+                        </ul>
                     </nav>
                 </div>
-
             </div>
-
         </div>
     </header>
 
-    <section class="about">
+    <main>
         <div class="container">
-
-                <div class="row">
-                    <div class="col-lg-1 col-md-0 col-sm-0 col-0"></div>
-                    <div class="col-lg-3 col-md-12 col-sm-12 col-12">
-                        <div class="section-header">
-                            <h1 class="section-header__title">Связаться</h1>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                        <div class="col-lg-1 col-md-3 col-sm-1 col-1"></div>
-                        <div class="col-lg-5 col-md-3 col-sm-1 col-1">
-                            <h1 class="contact-block__header">Приходите</h1>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-1 col-1">
-                            <h1 class="contact-block__header">Заказать звонок</h1>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-1 col-1"></div>
-                </div>
-
-                
-                <div class="row">
-                        <div class="col-lg-1 col-md-3 col-sm-1 col-1"></div>
-                        <div class="col-lg-5 col-md-3 col-sm-1 col-1">
-                            <p> г. Тверь, наб. Реки Лазури, дом 15 </p>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-1 col-1">
-                            <p class="contact-block__input-label">Как к вам обращаться?</p>
-                            <input class="contact-block__input-element" autofocus>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-1 col-1">
-                            <p class="contact-block__input-label">Телефон</p>
-                            <input class="contact-block__input-element">
-                        </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-1 col-md-3 col-sm-1 col-1"></div>
-                    <div class="col-lg-5 col-md-3 col-sm-1 col-1">
-                        <img class ="content-block__img" src="img/workplace.jpg" alt="loco">
-                    </div>
-
-                    <div class="col-lg-6 col-md-3 col-sm-1 col-1">
-                        <div class="contact-block__send">
-                            <div>Нажимая на кнопку, вы даете согласие на </br><span class="contact-block__send_underlined">обработку персональных данных.</span></div>
-                            <button type="button" class="contact-block__button">ОТПРАВИТЬ</button>
-                        </div>
-
-                        <h1 class="contact-block__header">Звоните</h1>
-
-                        <div class="phone-block__contacts">
-                                <div>
-                                    <div class="phone-block__city">Тверь</div>
-                                    <div class="phone-block__phone-number">8-800-555-35-35</div>
-                                </div>
-                                <div>
-                                    <div class="phone-block__city">Москва</div>
-                                    <div class="phone-block__phone-number">8-800-555-35-35</div>
-                                </div>
-                                <div>
-                                    <div class="phone-block__city">Санк-Петербург</div>
-                                    <div class="phone-block__phone-number">8-800-555-35-35</div>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-        </div>
-    </section>
-
-    <footer class = "footer-bar">
-        <div class="container">
+            <h1>Связаться</h1>
             <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-5 col-5">
-                    <p class="footer-bar__copyrights footer-bar__copyrights_bold">&copy; 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
-                </div>
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-5">
+                        <section class = "workplace">
+                            <h2>Приходите</h2>
+                            <p class ="workplace__name"> г. Тверь, наб. Реки Лазури, дом 15 </p>
+                            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afb72bcf248285db709a7b8182e8cdaf5944d7fea4376bebb254681d95ababb53&amp;source=constructor" 
+                             frameborder="0"></iframe>
+                        </section>
+                    </div>
+                    <div class="col-lg-6">
+                        <form>
+                            <div class="container-fluid">
+                                <h2>Заказать звонок</h2>
+                                <div class="row mb-3">
+                                    <div class="col-lg-6">
+                                        <label>Как к вам обращаться?<input type="text"></label>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <label>Телефон<input type="text"></label>
+                                    </div>
+                                </div>
+                                <div class="row ml-3">
+                                        <div class="col-lg-8 ml-13 mr-0 px-0 text-center">
+                                            <p>Нажимая на кнопку, вы даете согласие на <a href="#">обработку персональных данных.</a></p>
+                                        </div>
 
-                <div class="col-lg-3 col-md-2 col-sm-1 col-1"></div>
+                                        <div class="col-lg-4 mx-0 px-0">
+                                            <button type="button">ОТПРАВИТЬ</button>
+                                        </div>
+                                </div>
+                            </div>
+                        </form>
+                        <section>
+                                <div class="container-fluid">
+                                        <h2>Звоните</h2>
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <section>
+                                                    <p class="city">Тверь</p>
+                                                    <p>8-800-535-55-55</p>
+                                                </section>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <section>
+                                                    <p class="city">Москва</p>
+                                                    <p>8-800-535-55-55</p>
+                                                </section>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <section>
+                                                    <p class="city">Санкт-Петербург</p>
+                                                    <p>8-800-535-55-55</p>
+                                                </section>
+                                            </div>
+                                        </div>
+                                </div>
+                        </section>
+                    </div>
+            </div>
+        </div>  
+    </main>
 
-                <div class="col-lg-3 col-md-5 col-sm-6 col-6">
-                    <p class="footer-bar__copyrights">Сделано в <a href="#" class="footer-bar__copyrights_highlighted footer-bar__copyrights_bold">INTERN START</a> </p>
+    <footer>
+        <div class="container">
+                <div class="row">
+                    <div class="col-lg-9">
+                        <p class="copyrights">&copy; 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
+                    </div>
+                    <div class="col-lg-3">
+                        <p class="developer">Сделано в <a href="#" class="developer-link">INTERN START</a> </p>
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
