--- a/ex2/public/index.html
+++ b/ex2/public/index.html
@@ -13,18 +13,19 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <div class= "logo">
-                        <img class ="logo__img" src="img/Logo.png" alt="rocket">
-                        <div class="logo__text">INTERN </br> START</div> 
-                    </div>
-                </div>
-
-                <div class="col-lg-6">
-                    <nav>
-                        <ul class="nav-list">
-                            <li class="nav-list__item"><a class = "nav-link" href="index.html">ОБО МНЕ</a></li>
-                            <li class="nav-list__item"><a class = "nav-link" href="contact.html">СВЯЗАТЬСЯ</a></li>
+                <div class="col-lg-12">
+                    <nav class="top-nav">
+                        <div class= "logo">
+                            <img class ="logo__img" src="img/Logo.png" alt="rocket">
+                            <div class="logo__text">INTERN </br> START</div> 
+                        </div>
+                        <input id="menu-toggle" type="checkbox" />
+                        <label class='menu-button-container' for="menu-toggle">
+                        <div class='menu-button'></div>
+                      </label>
+                        <ul class="menu">
+                            <li><a class = "nav-list-link" href="index.html">ОБО МНЕ</a></li>
+                            <li><a class = "nav-list-link" href="contact.html">СВЯЗАТЬСЯ</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -80,10 +81,9 @@
     <footer>
         <div class="container">
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-9">
                         <p class="copyrights">&copy; 2019, ВСЕ ПРАВА ЗАЩИЩЕНЫ</p>
                     </div>
-                    <div class="col-lg-6"></div>
                     <div class="col-lg-3">
                         <p class="developer">Сделано в <a href="#" class="developer-link">INTERN START</a> </p>
                     </div>
