--- a/ex3/public/index.html
+++ b/ex3/public/index.html
@@ -23,47 +23,28 @@
 
     <main>
         <div class="container">
-            <input id="to-do-input-id" type="text" placeholder="Чего изволите сделать?">
+            <div class="row">
+                <div class="col-lg-12">
+                    <form name="todo" class="todo-form">
+                        <input type="text" name="todo-name" class="form-control" 
+                        placeholder="Чего изволите сделать?"
+                        aria-describedby="basic-addon2" autofocus />
+                        <button type="submit">Добавить</button>
+                    </form>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <h1>АКТИВНЫЕ ЗАДАЧИ</h1>
-                        <div class="card-item">
-                            <div class = "card-item_text"></div>
-                            <div class = "card-actions-area">
-                                <button id = "change_state_btn" class = "card-item_buttom">Готово!</button>
-                                <button id = "arch_btn" class = "card-item_buttom">Архивировать</button>
-                            </div>
-                        </div>  
-                    <section>
-                        <ul id ="to-do-list">
-                            <li>C</li>
-                            <li>C++</li>
-                            <li>C#</li>
-                            <li>Java</li>
-                        </ul>
-                    </section>
+                    <h1>Активные задачи</h1>
+                    <ul class="todos"></ul>
                 </div>
                 <div class="col-lg-4">
-                    <h1>ЗАВЕРШЕННЫЕ ЗАДАЧИ</h1>
-                    <section>
-                        <ul id ="done-list">
-                            <li>C</li>
-                            <li>C++</li>
-                            <li>C#</li>
-                            <li>Java</li>
-                        </ul>
-                    </section>
+                    <h1>Завершенные задачи</h1>
+                    <ul class="todos-done"></ul>
                 </div>
                 <div class="col-lg-4">
-                    <h1>АРХИВНЫЕ ЗАДАЧИ</h1>
-                    <section>
-                        <ul id ="archived-list">
-                            <li>C</li>
-                            <li>C++</li>
-                            <li>C#</li>
-                            <li>Java</li>
-                        </ul>
-                    </section>
+                    <h1>Архив задач</h1>
+                    <ul class="todos-archived"></ul>
                 </div>
             </div>
         </div>  
@@ -81,7 +62,9 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="view.js"></script>
+    <script src="data.js"></script>
+    <script src="action.js"></script>
   </body>
 </html>
 
