--- a/ex1/стоп.html
+++ b/ex1/стоп.html
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
   <title>Кирпич</title>  
+  <link rel="slylesheet" href="style.css">
  </head>
  <body>
-  <div>
-    <p><img srс="stop.jpg" alt="Знак стоп" style="max-width:100%"></p>
+  <div class="round">
   </div>
  </body>
 </html>
