add block with the help pseudo-element

--- a/ex1/work.html
+++ b/ex1/work.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="style.css">
  </head>
  <body>
-  <div class="round">
-      <div class="rectangle">
-      </div>
-  </div>
+  <div class="round"></div>
  </body>
 </html>
